--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,14 +1,23 @@
-/* style/style.css */
 .navbar-brand img {
     width: 50px;
     height: 70px;
+}
+
+#mainNavbar {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  transition: top 0.3s ease-in-out;
+}
+
+.navbar.navbar-position.bg-light{
+    background-color: white !important;
 }
 
 .navbar-nav .nav-link:hover {
     color: orange !important;
 }
 
-/* Default dropdown-menu style for all devices */
 .dropdown-menu {
     border-radius: 0 !important;
     box-shadow: none;
@@ -16,7 +25,6 @@
     padding: 0.25rem 0;
 }
 
-/* Desktop only: animate dropdown appearance */
 @media (min-width: 992px) {
     .dropdown-menu {
         opacity: 0;
@@ -36,20 +44,19 @@
     }
 }
 
-/* Divider between dropdown items */
 .dropdown-item:not(:last-child)::after {
-    content: '';
+    content: none;
     display: block;
     height: 1px;
     background-color: #dee2e6;
     margin: 0.5rem 0;
     opacity: 0.6;
 }
-
-/* Dropdown items */
 .dropdown-item {
-    padding: 0.75rem 1.25rem;
+    padding: 1.25rem 1.75rem;
     font-weight: 500;
+    display: block;
+    width: 100%;
     color: #374151;
     transition: background-color 0.2s ease, color 0.2s ease;
     border-radius: 0;
@@ -57,15 +64,34 @@
     background-color: transparent;
     position: relative;
 }
-
-.dropdown-item:hover {
-    background-color: #f8f9fa;
-    color: orange;
+.dropdown-menu {
+  padding: 0 !important; 
 }
-
-/* Navbar links */
+.dropdown-item:hover {
+    background-color: #036280;
+    color: white;
+}
 .navbar-nav .nav-link {
-    font-weight: 500;
+    font-weight: 400;
     position: relative;
     transition: all 0.3s ease;
+}
+.dropdown-divider{
+    margin: 0 !important;
+    padding: 0 !important;
+}
+button.btn {
+  padding: 10px !important;
+  line-height: 1;
+} 
+button.btn.btn-primary {
+  background-color: #012e4a;
+  transition: all 0.3s ease;
+} 
+button.btn.btn-primary:hover {
+  background-color: #036280;
+} 
+.footer-color{
+    background-color: #012e4a;
+    color: white;
 }
