--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,4 +1,7 @@
-/* style/style.css */
+body{
+    color: #012e4a;
+}
+
 .navbar-brand img {
     width: 50px;
     height: 70px;
@@ -24,6 +27,11 @@
     box-shadow: none;
     border: 1px solid #dee2e6;
     padding: 0.25rem 0;
+}
+
+.carousel-item img {
+    height: 500px; 
+    object-fit: cover; 
 }
 
 @media (min-width: 992px) {
