--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -280,6 +280,16 @@ button.btn.btn-primary:hover {
     font-size: 1.1rem;
 }
 
+.profile-container {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    background-color: #ffffff; /* putih bersih */
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05); /* soft shadow */
+}
+
+
 /* Responsive Design */
 @media (max-width: 1200px) {
     .custom-control-prev {
