--- a/assets/style/detail.css
+++ b/assets/style/detail.css
@@ -6,6 +6,21 @@ body {
     padding: 0;
     color: #333;
   }
+
+  .home-icon {
+    position: relative;
+    
+    font-size: 1.8rem;
+    color: #012e4a;
+    z-index: 1000;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.home-icon:hover {
+    color: #0d6efd;
+}
+
   h2 {
     font-size: 22px;
     margin-top: 30px;
