--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -95,6 +95,9 @@ body {
     color: white;
 }
 
+.swiper p{
+    font-size: 0.75rem !important;
+}
 .navbar-nav .nav-link {
     font-weight: 400;
     position: relative;
@@ -105,12 +108,6 @@ body {
     margin: 0 !important;
     padding: 0 !important;
 }
-
-button.btn {
-    padding: 10px !important;
-    line-height: 1;
-}
-
 button.btn.btn-primary {
     background-color: #012e4a;
     transition: all 0.3s ease;
@@ -348,5 +345,11 @@ button.btn.btn-primary:hover {
     
     .social-icons {
         justify-content: center;
+    }
+}
+
+@media (max-width: 576px){
+    body{
+        font-size: 10px;
     }
 }
