preview katalog pdf

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -138,6 +138,7 @@ button.btn.btn-primary:hover {
 }
 .hero-section::before {
     content: '';
+    pointer-events: none;
     position: absolute;
     top: 0;
     left: 0;
